[project]
name = "pubtrends"
version = "1.0.0"
description = "Python components for Pubtrends"
requires-python = "==3.12.*"
dependencies = [
    "pip",
    "bokeh==3.8.2",
    "cachetools",
    "celery",
    "fastparquet",
    "flask==3.1.3",
    "flask-admin",
    "flask-caching",
    "flask-security",
    "flask-sqlalchemy",
    "jinja2",
    "ipywidgets",
    "holoviews",
    "huggingface-hub>=0.26.0",
    "transformers>=4.46.0",
    "sentence-transformers",
    "gensim",
    "matplotlib",
    "more-itertools",
    "networkx",
    "nltk",
    "pandas",
    "parameterized",
    "passlib[bcrypt]",
    "psutil",
    "psycopg2-binary",
    "pyarrow",
    "pytest",
    "requests==2.32.4",
    "scikit-learn",
    "scipy",
    "seaborn",
    "spacy",
    "statsmodels",
    "sqlalchemy",
    "tqdm",
    "umap-learn",
    "unidecode",
    "wordcloud",
    "email-validator",
    "gunicorn",
    "redis",
    "lazy",
    "pytest-flake8",
    "python-levenshtein",
    "shapely",
    "teamcity-messages",
    "text2num",
    "vine",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "biopython",
    "flasgger",
]
# Are required also
#    "spacy",
#    "faiss-cpu",
#    "transformers[torch]",
#    "sentence-transformers"

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
