[project]
name = "pubtrends"
version = "1.0.0"
description = "Python components for Pubtrends"
requires-python = "==3.12.*"
dependencies = [
    "pip",
    "bokeh==3.8.2",
    "cachetools",
    "celery",
    "fastparquet",
    "flask",
    "werkzeug<3.1",
    "flask-admin",
    "flask-caching",
    "flask-security",
    "flask-sqlalchemy",
    "jinja2",
    "ipywidgets",
    "holoviews",
    "gensim",
    "matplotlib",
    "more-itertools",
    "networkx",
    "nltk",
    "pandas",
    "parameterized",
    "passlib[bcrypt]",
    "psutil",
    "psycopg2-binary",
    "pyarrow",
    "pytest",
    "requests",
    "scikit-learn",
    "scipy",
    "seaborn",
    "spacy",
    "statsmodels",
    "sqlalchemy",
    "tqdm",
    "umap-learn",
    "unidecode",
    "wordcloud",
    "email-validator",
    "gunicorn",
    "redis",
    "lazy",
    "pytest-flake8",
    "python-levenshtein",
    "shapely",
    "teamcity-messages",
    "text2num",
    "testcontainers[postgres]",
    "vine",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "biopython",
    "flasgger",
    "faiss-cpu",
    "transformers",
    "optimum[onnxruntime]",
    "onnxruntime"
]

[tool.uv]
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

[project.optional-dependencies]
gpu = [
    "sentence-transformers",
    "torch",
]
